syntax = "proto3";

package urdu_story;

// Request message for story generation
message GenerateRequest {
  string prefix = 1;         // Starting phrase in Urdu
  int32 max_length = 2;      // Maximum tokens to generate
}

// Response message with generated story chunk
message GenerateResponse {
  string chunk = 1;          // Story chunk (for streaming)
  bool is_final = 2;         // Whether this is the final chunk
  int32 num_tokens = 3;      // Number of tokens generated so far
  float lambda3 = 4;         // Trigram weight
  float lambda2 = 5;         // Bigram weight
  float lambda1 = 6;         // Unigram weight
}

// gRPC service definition
service StoryGenerator {
  rpc Generate (GenerateRequest) returns (stream GenerateResponse) {}
  rpc GetModelInfo (Empty) returns (ModelInfo) {}
}

// Empty message
message Empty {}

// Model information
message ModelInfo {
  int32 vocab_size = 1;
  float lambda3 = 2;
  float lambda2 = 3;
  float lambda1 = 4;
  string model_version = 5;
}
